# attractor_study

./: CMakeLists.txt  README.md  test_methods.json  test_steps.json
src/: CMakeLists.txt  attractor.cpp  main.cpp  test_methods.cpp
src/draw/: draw_test.py
src/headers/: attractor.h  matrix3x3.h  test_methods.h  vector3.h
